--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <div class="menutop">
-              <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
-                <a class="navbar-brand" href="#">OCT27th</a>
+              <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light d-flex justify-content-between">
+                <a class="navbar-brand" href="#">PHUCS27</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse flex-grow-0 " id="navbarNav" >
                   <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                       <a class="nav-link" href="#">Giới thiệu <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
