--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
+            <!-- menu-->
             <div class="menutop">
               <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light d-flex justify-content-between">
                 <a class="navbar-brand" href="#">PHUCS27</a>
@@ -40,6 +41,11 @@
                   </ul>
                 </div>
               </nav>
+            </div>
+            <div class="main">
+              <div class="thongtin1">
+                
+              </div>
             </div>
           </div>
         </div>
