--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- menu-->
             <div class="menutop">
               <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light d-flex justify-content-between">
-                <a class="navbar-brand" href="#">PHUCS27</a>
+                <a class="navbar-brand" style="color: rgb(139, 10, 10);" href="#">PHUCS27</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,7 +44,14 @@
             </div>
             <div class="main">
               <div class="thongtin1">
-                
+                <div class="content_tt text-center ">
+                  <img src="./Picture/Avatar.jpg" alt="phuc">
+                  <h2>Đoàn Văn Phúc</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
+                  </p>
+                  <a href=""type="button" class="hire_button btn btn-info">Hợp tác</a>
+                </div>
               </div>
             </div>
           </div>
