--- a/index.html
+++ b/index.html
@@ -54,54 +54,46 @@
                   <a href=""type="button" class="hire_button btn btn-info">Hợp tác</a>
                 </div>
               </div>
-              <!--exp &edu-->
-              <div class="edu col-sm-12 row">
-                <div class="col-sm-12 edu_ex text-center">
-                  <h2 class="p-3">Học vấn & kinh nghiệm</h2>
-                </div>
-                <div class="col-sm-6 edu">
-                  <h2 class="title_edu text-sm-right text-center">Học vấn</h2>
-                  <div class="content_edu text-sm-right text-center">                   
-                    <h3>Đại học công nghệ thông tin và truyền thông</h3>
-                    <span class="timeline">08/2015-07/2020</span><br>
-                    <span>Khoa: Công nghệ thông tin</span>
-                    <p class="detail_edu">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ad tempora expedita illum provident placeat, architecto mollitia. Modi, ipsam quo!</p>
-                  </div>
-                  <div class="content_edu text-sm-right text-center pt-3">            
-                    <h3>Viện công nghệ và đào tạo Devmaster</h3>
-                    <span class="timeline">03/2020-08/2020</span><br>
-                    <span>Khoá học: Lập trình web với ASP.Net</span>             
-                    <p class="detail_edu">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ad tempora expedita illum provident placeat, architecto mollitia. Modi, ipsam quo!</p>
-                  </div>
-                </div>
-                
-                <!--
-                  <div class="col-sm-4 ">
-                  <img class="picture_edu" src="./Picture/dvp.png" alt="">
-                </div>
-                -->
-                <div class="col-sm-6 exp">
-                  <h2 class="title_edu text-sm-left text-center">Kinh nghiệm</h2>
-                  <div class="content_edu text-sm-left text-center">                   
-                    <h3>FPT software</h3>
-                    <span class="timeline">11/2019-01/2020</span><br>
-                    <span>Thực tập sinh</span>
-                    <p class="detail_edu">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ad tempora expedita illum provident placeat, architecto mollitia. Modi, ipsam quo!</p>
-                  </div>
-                  <div class="content_edu text-sm-left text-center pt-3">            
-                    <h3>FPT retail</h3>
-                    <span class="timeline">10/2020-05/2021</span><br>
-                    <span>Vị trí: Nhân viên kỹ thuật</span>             
-                    <p class="detail_edu">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ad tempora expedita illum provident placeat, architecto mollitia. Modi, ipsam quo!</p>
-                  </div>
-                  <div class="content_edu text-sm-left text-center pt-3">            
-                    <h3>FPT retail</h3>
-                    <span class="timeline">10/2020-05/2021</span><br>
-                    <span>Vị trí: Nhân viên kỹ thuật</span>             
-                    <p class="detail_edu">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam ad tempora expedita illum provident placeat, architecto mollitia. Modi, ipsam quo!</p>
-                  </div>
-                </div>
-              </div>
+
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 edu">
+            <h2 class="text-center font-weight-bold py-4">Học vấn</h2> 
+            <div class="content_edu">        
+              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
+              <span class="">Khoa: Công nghệ thông tin</span><br>
+              <span class="text-secondary">08/2015-08/2020</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+                suscipit officiis optio quibusdam commodi at voluptates maxime quos.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium eaque dolorum voluptatem consequatur, ab, quisquam cumque asperiores ipsum harum, labore pariatur optio quasi? Porro suscipit veniam optio quaerat soluta. Sit.</p>
+              <hr class="border">
+            </div>
+            <div class="content_edu">        
+              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
+              <span class="">Khoa: Công nghệ thông tin</span><br>
+              <span class="text-secondary">08/2015-08/2020</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <hr class="border">
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 edu">
+            <h2 class="text-center font-weight-bold py-4">Kinh nghiệm</h2> 
+            <div class="content_edu">        
+              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
+              <span class="">Khoa: Công nghệ thông tin</span><br>
+              <span class="text-secondary">08/2015-08/2020</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <hr class="border">
+            </div>
+            <div class="content_edu">        
+              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
+              <span class="">Khoa: Công nghệ thông tin</span><br>
+              <span class="text-secondary">08/2015-08/2020</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <hr class="border">
             </div>
           </div>
         </div>
