--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="col-12">
             <!-- menu-->
             <div class="menutop">
-              <nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light d-flex justify-content-between">
+              <nav class="navbar fixed-top navbar-expand-lg navbar-light d-flex justify-content-between">
                 <a class="navbar-brand" style="color: rgb(139, 10, 10);" href="#">PHUCS27</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
                       <a class="nav-link" href="#">Giới thiệu <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Kinh nghiệm</a>
+                      <a class="nav-link exp" href="#">Kinh nghiệm</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Sản phẩm</a>
@@ -51,19 +51,21 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
                   </p>
-                  <a href=""type="button" class="hire_button btn btn-info">Hợp tác</a>
+                  <div class="roller position-fixed"></div>
+                  <a href=""type="button" class="hire_button btn btn-secondary">Hợp tác</a>
+                  
                 </div>
+                
               </div>
-
             </div>
           </div>
-          <div class="col-12 col-sm-6 edu">
-            <h2 class="text-center font-weight-bold py-4">Học vấn</h2> 
+          <div class="col-12 col-sm-6 edu" id="edu">
+            <h3 class="text-center font-weight-bold py-4">Học vấn</h3> 
             <div class="content_edu">        
               <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
               <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary">08/2015-08/2020</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+              <span class="text-secondary time">08/2015-08/2020</span>
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium eaque dolorum voluptatem consequatur, ab, quisquam cumque asperiores ipsum harum, labore pariatur optio quasi? Porro suscipit veniam optio quaerat soluta. Sit.</p>
               <hr class="border">
@@ -71,27 +73,27 @@
             <div class="content_edu">        
               <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
               <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary">08/2015-08/2020</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+              <span class="text-secondary time">08/2015-08/2020</span>
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
               <hr class="border">
             </div>
           </div>
           <div class="col-12 col-sm-6 edu">
-            <h2 class="text-center font-weight-bold py-4">Kinh nghiệm</h2> 
+            <h3 class="text-center font-weight-bold py-4">Kinh nghiệm</h3> 
             <div class="content_edu">        
               <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
               <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary">08/2015-08/2020</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+              <span class="text-secondary time">08/2015-08/2020</span>
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
               <hr class="border">
             </div>
             <div class="content_edu">        
               <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
               <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary">08/2015-08/2020</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+              <span class="text-secondary time">08/2015-08/2020</span>
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
               <hr class="border">
             </div>
