--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <!--info-->
               <div class="thongtin1">
                 <div class="content_tt text-center ">
-                  <img src="./Picture/Avatar.jpg" alt="phuc">
+                  <img src="./Picture/avatar.png" alt="phuc">
                   <h2>Đoàn Văn Phúc</h2>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
@@ -65,16 +65,16 @@
               <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
               <span class="">Khoa: Công nghệ thông tin</span><br>
               <span class="text-secondary time">08/2015-08/2020</span>
-              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium eaque dolorum voluptatem consequatur, ab, quisquam cumque asperiores ipsum harum, labore pariatur optio quasi? Porro suscipit veniam optio quaerat soluta. Sit.</p>
               <hr class="border">
             </div>
             <div class="content_edu">        
-              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
-              <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary time">08/2015-08/2020</span>
-              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+              <h4 class="font-weight-bold">Viện công nghệ và đào tạo Devmaster</h4>
+              <span class="">Khoá học: Lập trình web với .Net MVC 5</span><br>
+              <span class="text-secondary time">03/2020-08/2020</span>
+              <p class="text-black-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
               <hr class="border">
             </div>
@@ -82,17 +82,25 @@
           <div class="col-12 col-sm-6 edu">
             <h3 class="text-center font-weight-bold py-4">Kinh nghiệm</h3> 
             <div class="content_edu">        
-              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
-              <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary time">08/2015-08/2020</span>
+              <h4 class="font-weight-bold">FPT software</h4>
+              <span class="">Vị trí: Thực tập sinh</span><br>
+              <span class="text-secondary time">11/2019-02/2020</span>
               <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
               <hr class="border">
             </div>
             <div class="content_edu">        
-              <h4 class="font-weight-bold">Đại học công nghệ thông tin và truyền thông Thái Nguyên</h4>
-              <span class="">Khoa: Công nghệ thông tin</span><br>
-              <span class="text-secondary time">08/2015-08/2020</span>
+              <h4 class="font-weight-bold">Công ty TNHH AI-VN</h4>
+              <span class="">Vị trí: Thực tập sinh</span><br>
+              <span class="text-secondary time">11/2019-02/2020</span>
+              <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
+                suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
+              <hr class="border">
+            </div>
+            <div class="content_edu">        
+              <h4 class="font-weight-bold">FPT retail</h4>
+              <span class="">Vị trí: Nhân viên kỹ thuật, sale</span><br>
+              <span class="text-secondary time">10/2020-04/2021</span>
               <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
               <hr class="border">
