--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="col-12 text-center ">
             <h3 class="  font-weight-bold py-4">Liên hệ</h3> 
           </div>
-          <div class="col-12 col-md-6 pt-4 text-center">
+          <div class="col-12 col-sm-6 pt-4 text-center">
             <form action="">
               <input class="border-bottom" type="text" name="name" placeholder="Your name"><br>
               <input class="border-bottom" type="email" name="email" placeholder="Email"><br>
@@ -122,21 +122,21 @@
               <button class="border-0 rounded" type="submit"><b>Gửi</b></button>
             </form>
           </div>
-          <div class="col-md-2"></div>
-          <div class="col-12 col-md-4 pt-4  info">
-            <div class=" pb-3 ">
+          <div class="col-sm-2"></div>
+          <div class="col-12 col-sm-4 pt-4 text-center text-sm-left ">
+            <div class="info pb-3 ">
               <img src="./Picture/envelope-fill.svg" alt="">
               <span>doanvanphuc27@gmail.com</span><br>      
             </div>
-            <div class=" pb-3">
+            <div class="info pb-3">
               <img src="./Picture/telephone-fill.svg" alt="">
               <span>0962190200</span><br>
             </div>
-            <div class=" pb-3">
+            <div class="info pb-3">
               <img src="./Picture/geo-alt-fill.svg" alt="">
               <span>Hungyen, Hungyen, Vietnam</span><br>
             </div> 
-            <div class=" pb-3">
+            <div class="info pb-3">
               <img src="./Picture/facebook.svg" alt="">
               <span>fb.com/phuc.oct27</span>
             </div>              
