--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     <li class="nav-item">
                       <a class="nav-link exp" href="#">Kinh nghiệm</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item sp">
                       <a class="nav-link" href="#">Sản phẩm</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Liên hệ</a>
+                    <li class="nav-item cont">
+                      <a class="nav-link contack-me" href="#">Liên hệ</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link " href="#">Comment</a>
@@ -51,7 +51,7 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
                   </p>
-                  <div class="roller position-fixed"></div>
+                  <div class="roller "></div>
                   <a href=""type="button" class="hire_button btn btn-secondary">Hợp tác</a>
                   
                 </div>
@@ -106,35 +106,35 @@
               <hr class="border">
             </div>
           </div>
-          <div class="col-12 portfolio">
+          <div class="col-12 portfolio" id="portfolio">
             <h3 class="text-center font-weight-bold py-4">Sản phẩm</h3>
           </div>               
         </div>
-        <div class="row contact ">
+        <div class="row contact " id="contact">
           <div class="col-12 text-center ">
             <h3 class="  font-weight-bold py-4">Liên hệ</h3> 
           </div>
-          <div class="col-12 col-sm-6 pt-4 text-center">
-            <form action="">
+          <div class="col-12 col-sm-6 py-4 text-center">
+            <form action="" method="POST">
               <input class="border-bottom" type="text" name="name" placeholder="Your name"><br>
               <input class="border-bottom" type="email" name="email" placeholder="Email"><br>
               <textarea class="border-bottom" name="message" id="message" placeholder="Message" rows="4"></textarea><br>
-              <button class="border-0 rounded" type="submit"><b>Gửi</b></button>
+              <button class="border-0 rounded " type="submit"><b>Gửi</b></button>
             </form>
           </div>
           <div class="col-sm-2"></div>
           <div class="col-12 col-sm-4 pt-4 text-center text-sm-left ">
             <div class="info pb-3 ">
               <img src="./Picture/envelope-fill.svg" alt="">
-              <span>doanvanphuc27@gmail.com</span><br>      
+              <span>doanvanphuc27@gmail.com</span>     
             </div>
             <div class="info pb-3">
               <img src="./Picture/telephone-fill.svg" alt="">
-              <span>0962190200</span><br>
+              <span>0962190200</span>
             </div>
             <div class="info pb-3">
               <img src="./Picture/geo-alt-fill.svg" alt="">
-              <span>Hungyen, Hungyen, Vietnam</span><br>
+              <span>Hungyen, Hungyen, Vietnam</span>
             </div> 
             <div class="info pb-3">
               <img src="./Picture/facebook.svg" alt="">
@@ -142,6 +142,9 @@
             </div>              
             </div>
           </div> 
+        </div>
+        <div class="header text-center">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, vitae.</p>
         </div>
       </div>
     <script src="./js/jquery-3.4.1.min.js" ></script>
