--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <a class="nav-link contack-me" href="#">Liên hệ</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link " href="#">Comment</a>
+                      <a class="nav-link " href="#">Blog</a>
                     </li>
                   </ul>
                 </div>
