--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
           </div>
           <div class="col-12 portfolio" id="portfolio">
             <h3 class="text-center font-weight-bold pt-3">Sản phẩm</h3>
-            <!--<div class="por-name text-center d-flex justify-content-center pb-3" >
+            <div class="por-name text-center d-flex justify-content-center pb-3" >
               <div class="active">All</div><span>|</span>
               <div>Photoshop</div><span>|</span>
               <div>UXUI</div><span>|</span>
               <div>Dev</div>
-            </div>-->
-            <div class="portfolio">
+            </div>
+            <!--<div class="portfolio">
               <ul class="nav justify-content-center">
                 <li class="nav-item">
                   <a class="nav-link active" href="#">All</a>
@@ -129,7 +129,7 @@
                   <a class="nav-link" href="#">DEV</a>
                 </li>
               </ul>
-            </div>
+            </div>-->
             <div class="pics-all grid">
               <div class="grid-sizer"></div>
               <div class="grid-item"><img src="./picture/pts/img2.jpg" alt=""></div>
