--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@ Latest commit b82f0b9 3 hours ago
             <div class="content">
               <div class="pics-all grid active" id="all">
                 <img class="grid-sizer" src="" alt="">
-                <img class="grid-item" src="./picture/pts/img1.jpg" alt="">
-                <img class="grid-item" src="./picture/pts/img2.jpg" alt="">
-                <img class="grid-item" src="./picture/pts/img3.jpg" alt="">
-                <img class="grid-item" src="./picture/pts/img4.jpg" alt="">
-                <img class="grid-item" src="./picture/pts/img6.jpg" alt="">
-                <img class="grid-item" src="./picture/pts/img5.jpg" alt="">
-                <img class="grid-item" src="./picture/pts/img7.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img1.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img2.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img3.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img6.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
                 <img class="grid-item" src="./Picture/uxui/Lập trinh.jpg" alt="">
                 <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học – 2.jpg" alt="">
                 <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học đã mua.jpg" alt="">        
