--- a/index.html
+++ b/index.html
@@ -1,33 +1,3 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@phucs27 
-phucs27
-/
-phucs27.github.io
-1
-00
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-phucs27.github.io/index.html
-@phucs27
-phucs27 'mma'
-Latest commit b82f0b9 3 hours ago
- History
- 1 contributor
-196 lines (191 sloc)  9.87 KB
-  
 <!doctype html>
 <html lang="en">
   <head>
@@ -181,9 +151,6 @@ Latest commit b82f0b9 3 hours ago
                 <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Lập trinh.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học – 2.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học đã mua.jpg" alt="">        
               </div>
               <div class="pics-pts grid" id="pts">
                 <img class="grid-sizer" src="" alt="">
@@ -224,29 +191,25 @@ Latest commit b82f0b9 3 hours ago
             <div class="info pb-3 d-flex">
               <img src="./Picture/envelope-fill.svg" alt="">
               <div class="tt">
-                <b>Email</b>
-                <p>doanvanphuc27@gmail.com</p>
+                <b>doanvanphuc27@gmail.com</b>
               </div>   
             </div>
             <div class="info pb-3 d-flex">
               <img src="./Picture/telephone-fill.svg" alt="">
               <div class="tt">
-                <b>Phone</b>
-                <p>0962190200</p>
+                <b>0962190200</b>
               </div>
             </div>
             <div class="info pb-3 d-flex">
               <img src="./Picture/geo-alt-fill.svg" alt="">
               <div class="tt">
-                <b>Address</b>
-                <p>HungYen, HungYen, Vienam</p>
+                <b>HungYen, HungYen, Vienam</b>
               </div>
             </div> 
             <div class="info pb-3 d-flex">
               <img src="./Picture/facebook.svg" alt="">
               <div class="tt">
-                <b>Fb</b>
-                <p>fb.com/phuc.oct27</p>
+                <b>fb.com/phuc.oct27</b>
              </div>
             </div>              
             </div>
