--- a/index.html
+++ b/index.html
@@ -138,12 +138,13 @@
           <div class="col-12 portfolio" >
             <h3 class="text-center font-weight-bold pt-3" id="duan">Dự án</h3>
             <div class="por-name tabs text-center d-flex justify-content-center pb-3" >
-              <div class="tab-child" data-tab="all" >ALL</div><span>|</span>
-              <div class="tab-child" data-tab="pts">PHOTOSHOP</div><span>|</span>
+              <div class="tab-child" data-tab="pts" >PHOTOSHOP</div><span>|</span>
               <div class="tab-child" data-tab="uxui">UXUI</div><span>|</span>
+              <div class="tab-child" data-tab="dev">DEV</div><span>
+
             </div>
             <div class="content">
-              <div class="pics-all grid active" id="all">
+              <div class="pics-pts grid active" id="pts">
                 <img class="grid-sizer" src="" alt="">
                 <img class="grid-item" src="./Picture/pts/img1.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img2.jpg" alt="">
@@ -151,16 +152,6 @@
                 <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
-              </div>
-              <div class="pics-pts grid" id="pts">
-                <img class="grid-sizer" src="" alt="">
-                <img class="grid-item" src="./Picture/pts/img1.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img2.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img3.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
-                
               </div>
               <div class="pics-uxui grid" id="uxui">
                 <img class="grid-item" src="./Picture/uxui/1Dang nhap.jpg" alt="">
@@ -170,7 +161,8 @@
                 <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học – 2.jpg" alt="">
                 <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học đã mua.jpg" alt="">
               </div>
-            </div>
+              <div class="pics-dev" id="dev"></div>
+            </div>x
           </div> 
         </div>
         <!--contact-->
