--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
 
             </div>
             <div class="content">
-              <div class="pics-pts grid active" id="pts">
+              <div class=" grid active" id="pts">
                 <img class="grid-sizer" src="" alt="">
                 <img class="grid-item" src="./Picture/pts/img1.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img2.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img3.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img4.jpg" alt="">
-                <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">
                 <img class="grid-item" src="./Picture/pts/img7.jpg" alt="">
+                <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">               
               </div>
-              <div class="pics-uxui grid" id="uxui">
+              <div class=" grid" id="uxui">   
                 <img class="grid-item" src="./Picture/uxui/1Dang nhap.jpg" alt="">
                 <img class="grid-item" src="./Picture/uxui/Home – 1.jpg" alt="">
                 <img class="grid-item" src="./Picture/uxui/profile – 1.jpg" alt="">
