--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- menu-->
             <div class="menutop">
               <nav class="navbar fixed-top navbar-expand-lg navbar-light d-flex justify-content-between">
-                <a class="navbar-brand" style="color: rgb(139, 10, 10);" href="#">PHUCS27</a>
+                <a class="navbar-brand" href="#"><img src="./Picture/logo.png" style="width: 100px;" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
