--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học đã mua.jpg" alt="">
               </div>
               <div class="pics-dev" id="dev"></div>
-            </div>x
+            </div>
           </div> 
         </div>
         <!--contact-->
@@ -208,7 +208,7 @@
           </div> 
         </div>
         <div class="header text-center">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium, vitae.
+          KHÔNG YÊU XIN ĐỪNG NÓI LỜI CAY ĐẮNG!
         </div>
       </div>
     <script src="./js/jquery-3.4.1.min.js" ></script>
