--- a/index.html
+++ b/index.html
@@ -49,11 +49,17 @@
                 <div class="content_tt text-center ">
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cum!
+                  <p>
+                    Xin chào. Tôi là Đoàn Văn Phúc. Tôi từng là sinh viên của
+                    Trường Đại Học công nghệ thông tin và truyền thông Thái Nguyên
+                    Tôi là một lập trình viên, mặc dù chưa có nhiều kinh nghiệm nhưng
+                    với những gì đã được học và tích luỹ được cùng với tinh thần trách
+                    nhiệm tôi luôn hoàn thành công việc một cách tôt nhất có thể.
+                    Tôi luôn tìm kiếm những cơ hội và thách thức trong việc để hoàn thiện
+                    bản thân tốt nhất có thể
                   </p>
                   <div class="roller "></div>
-                  <a href=""type="button" class="hire_button btn btn-secondary">Hợp tác</a>
+                  <a href=""type="button" class="hire_button btn btn-secondary">Liên hệ</a>
                   
                 </div>
                 
@@ -207,7 +213,7 @@
             </div>
           </div> 
         </div>
-        <div class="header text-center">
+        <div class="header text-center font-weight-bold py-1">
           KHÔNG YÊU XIN ĐỪNG NÓI LỜI CAY ĐẮNG!
         </div>
       </div>
