--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
                     Xin chào. Tôi là Đoàn Văn Phúc. Tôi từng là sinh viên của
-                    Trường Đại Học công nghệ thông tin và truyền thông Thái Nguyên
-                    Tôi là một lập trình viên, mặc dù chưa có nhiều kinh nghiệm nhưng
+                    Trường Đại Học công nghệ thông tin và truyền thông Thái Nguyên.
+                    Mặc dù chưa có nhiều kinh nghiệm nhưng
                     với những gì đã được học và tích luỹ được cùng với tinh thần trách
                     nhiệm tôi luôn hoàn thành công việc một cách tôt nhất có thể.
                     Tôi luôn tìm kiếm những cơ hội và thách thức trong việc để hoàn thiện
