--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/portfolio.css">
+    <script src="./js/masonry.min.js"></script>  
   </head>
   <body>
       <div class="container-fluid">
@@ -50,13 +51,8 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào. Tôi là Đoàn Văn Phúc. Tôi từng là sinh viên của
-                    Trường Đại Học công nghệ thông tin và truyền thông Thái Nguyên.
-                    Mặc dù chưa có nhiều kinh nghiệm nhưng
-                    với những gì đã được học và tích luỹ được cùng với tinh thần trách
-                    nhiệm tôi luôn hoàn thành công việc một cách tôt nhất có thể.
-                    Tôi luôn tìm kiếm những cơ hội và thách thức trong việc để hoàn thiện
-                    bản thân tốt nhất có thể
+                    Xin chào... 
+                  
                   </p>
                   <div class="roller "></div>
                   <a href=""type="button" class="hire_button btn btn-secondary">Liên hệ</a>
@@ -160,12 +156,13 @@
                 <img class="grid-item" src="./Picture/pts/img5.jpg" alt="">               
               </div>
               <div class=" grid" id="uxui">   
+                <img class="grid-sizer " src="" alt="">
                 <img class="grid-item" src="./Picture/uxui/1Dang nhap.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Home – 1.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/profile – 1.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Lập trinh.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học – 2.jpg" alt="">
-                <img class="grid-item" src="./Picture/uxui/Chi tiet khoá học đã mua.jpg" alt="">
+                <img class="grid-item " src="./Picture/uxui/Home – 1.jpg" alt="">
+                <img class="grid-item " src="./Picture/uxui/profile – 1.jpg" alt="">
+                <img class="grid-item " src="./Picture/uxui/Lập trinh.jpg" alt="">
+                <img class="grid-item " src="./Picture/uxui/Chi tiet khoá học – 2.jpg" alt="">
+                <img class="grid-item " src="./Picture/uxui/Chi tiet khoá học đã mua.jpg" alt="">
               </div>
               <div class="pics-dev" id="dev"></div>
             </div>
@@ -220,11 +217,9 @@
     <script src="./js/jquery-3.4.1.min.js" ></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/masonry.min.js"></script>  
     <script src="./js/script.js"></script>
     <script src="./js/tabs.js"></script>
     <script src="./js/send-mail.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script type="text/javascript">
       (function() {
         emailjs.init("user_OVeE89YjAJinBfy6aNVP0");
