--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <img src="./Picture/avatar.png" alt="phuc">
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
-                    Xin chào... 
-                  
+                    Xin chào. <br>
+                    Tôi là người bán sức lao động. Nếu cần hãy liên hệ hớp tác với tôi.
                   </p>
                   <div class="roller "></div>
                   <a href=""type="button" class="hire_button btn btn-secondary">Liên hệ</a>
