--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <h2 class="text-uppercase">Đoàn Văn Phúc</h2>
                   <p>
                     Xin chào. <br>
-                    Tôi là người bán sức lao động. Nếu cần hãy liên hệ hớp tác với tôi.
+                    Ở đây có bán sức lao động.
                   </p>
                   <div class="roller "></div>
                   <a href=""type="button" class="hire_button btn btn-secondary">Liên hệ</a>
