--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="content_edu">        
               <h4 class="font-weight-bold">Công ty TNHH AI-VN</h4>
-              <span class="">Vị trí: Thực tập sinh</span><br>
+              <span class="">Vị trí: Fresher</span><br>
               <span class="text-secondary time">11/2019-02/2020</span>
               <p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde officia explicabo 
                 suscipit officiis optio quibusdam commodi at voluptates maxime quos.</p>
